(feat:login.jsx) add password visibility,(feat:Mypage.jsx)fix bug

--- a/src/Components/MainPage/Components/Header/Header.module.css
+++ b/src/Components/MainPage/Components/Header/Header.module.css
@@ -9,4 +9,5 @@
     position: absolute;
     right: 0;
     font-size: 20px;
+    z-index: 1;
 }
